--- a/single.html
+++ b/single.html
@@ -8,16 +8,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
 <script type="application/x-javascript">
-	
 	 addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
-
 </script>
 <!-- //Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet"
 	media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/account.css" type="text/css" rel="stylesheet"
-	media="all">
+<link href="css/account.css" type="text/css" rel="stylesheet" media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -122,51 +119,39 @@
 				</div>
 				<!--//navbar-header-->
 			</nav>
-			<div class="header-info">
-				<div class="header-right login">
-					<a href="#" id="user" style="right: 150px; position: absolute;"><span
-						class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
-					<div id="loginBox" style="right: 130px; top: 54px;">
-						<form id="loginForm">
-							<fieldset id="body">
-								<fieldset>
-									<label for="email">Email Address</label> <input type="text"
-										name="email" id="email">
-								</fieldset>
-								<fieldset>
-									<label for="password">Password</label> <input type="password"
-										name="password" id="password">
-								</fieldset>
-								<input type="button" id="login" value="Sign in"
-									onClick="Login()"> <label for="checkbox"><input
-									type="checkbox" id="checkbox"> <i>Remember me</i><a
-									id=msg></a></label>
-							</fieldset>
-							<p>
-								New User ? <a class="sign" href="account.html">Sign Up</a> <span><a
-									href="#">Forgot your password?</a></span>
-							</p>
-						</form>
-					</div>
-				</div>
-				<div class="header-right cart">
-					<a href="#" style="right: 100px; position: absolute;"><span
-						class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-					<div class="cart-box" style="right: 75px; top: 54px;">
-						<h4>
-							<a href="checkout.html"> <span class="simpleCart_total">
-									$0.00 </span> (<span id="simpleCart_quantity"
-								class="simpleCart_quantity"> 0 </span>)
-							</a>
-						</h4>
-						<p>
-							<a href="javascript:;" class="simpleCart_empty">Empty cart</a>
-						</p>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
+            <div class="header-info">
+                <div class="header-right login">
+                    <a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+                    <div id="loginBox" style="right:16%;">
+                        <form id="loginForm">
+                            <fieldset id="body">
+                                <fieldset>
+                                    <label for="email">Email Address</label>
+                                    <input type="text" name="email" id="email">
+                                        </fieldset>
+                                <fieldset>
+                                    <label for="password">Password</label>
+                                    <input type="password" name="password" id="password">
+                                        </fieldset>
+                                <input type="submit" id="login" value="Sign in">
+                                    <label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
+                                    </fieldset>
+                            <p>New User ? <a class="sign" href="account.html">Sign Up</a> <span><a href="#">Forgot your password?</a></span></p>
+                        </form>
+                    </div>
+                </div>
+                <div class="header-right cart">
+                    <a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                    <div class="cart-box" style="right:10.5%;">
+                        <h4><a href="checkout.html">
+                            <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>) 
+                        </a></h4>
+                        <p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
+                        <div class="clearfix"> </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
@@ -200,62 +185,32 @@
 					</div>
 				</div>
 				<div class="col-md-4 single-grid simpleCart_shelfItem">
-					<h3>Yummy freshly baked Blackforest Cake 1 Kg! with blends of
-						chocochips</h3>
-					<p>Cake cutting is one of the most wonderful ways of
-						celebrating a special moment. What better way to celebrate than
-						with a rich and mouth watering chocochips cake</p>
-					<ul class="size">
-						<h3>Size</h3>
-						<li><a href="#">1 KG</a></li>
-						<li><a href="#">2 KG</a></li>
-						<li><a href="#">3 KG</a></li>
-						<li><a href="#">4 KG</a></li>
-					</ul>
-					<ul class="size">
-						<h3>2-3 Tier Cakes</h3>
-						<li><a href="#">1 Step</a></li>
-						<li><a href="#">2 Step</a></li>
-						<li><a href="#">3 Step</a></li>
-					</ul>
+					<h3>书名</h3>
+					<p>书籍信息</p>
 					<div class="galry">
 						<div class="prices">
-							<h5 class="item_price">$995.00</h5>
+							<h5 class="item_price">价格</h5>
 						</div>
 						<div class="rating">
 							<span>☆</span> <span>☆</span> <span>☆</span> <span>☆</span> <span>☆</span>
 						</div>
 						<div class="clearfix"></div>
 					</div>
-					<p class="qty">Qty :</p>
+					<p class="qty">购买数量 :</p>
 					<input min="1" type="number" id="quantity" name="quantity"
 						value="1" class="form-control input-small">
 					<div class="btn_form">
-						<a href="#" class="add-cart item_add">ADD TO CART</a>
+						<a href="#" class="add-cart item_add">添加到购物车</a>
+						<a href="#" class="add-cart item_add">购买</a>
 					</div>
 					<div class="tag">
 						<p>
-							Category : <a href="#"> Cakes</a>
+							类别 : <a href="#"> Cakes</a>
 						</p>
 						<p>
-							Tag : <a href="#"> Lorem ipsum </a>
+							标签 : <a href="#"> Lorem ipsum </a>
 						</p>
 					</div>
-				</div>
-				<div class="col-md-4 single-grid1">
-					<h2>Account</h2>
-					<ul>
-						<li><a href="#">Offers</a></li>
-						<li><a href="products.html">New products</a></li>
-						<li><a href="account.html">Register</a></li>
-						<li><a href="account.html">Forgot Your Password</a></li>
-						<li><a href="account.html">My account</a></li>
-						<li><a href="contact.html">Address</a></li>
-						<li><a href="checkout.html.html">wishlist</a></li>
-						<li><a href="checkout.html.html">Order history</a></li>
-						<li><a href="#">Downloads</a></li>
-						<li><a href="#">Reward points</a></li>
-					</ul>
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -271,7 +226,7 @@
 						<h4 class="panel-title">
 							<a role="button" data-toggle="collapse" data-parent="#accordion"
 								href="#collapseOne" aria-expanded="true"
-								aria-controls="collapseOne"> Description </a>
+								aria-controls="collapseOne"> 书籍描述 </a>
 						</h4>
 					</div>
 					<div id="collapseOne" class="panel-collapse collapse in"
@@ -295,7 +250,7 @@
 							<a class="collapsed" role="button" data-toggle="collapse"
 								data-parent="#accordion" href="#collapseTwo"
 								aria-expanded="false" aria-controls="collapseTwo">
-								additional information </a>
+								评价 </a>
 						</h4>
 					</div>
 					<div id="collapseTwo" class="panel-collapse collapse"
@@ -313,192 +268,22 @@
 						</div>
 					</div>
 				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingThree">
-						<h4 class="panel-title">
-							<a class="collapsed" role="button" data-toggle="collapse"
-								data-parent="#accordion" href="#collapseThree"
-								aria-expanded="false" aria-controls="collapseThree"> reviews
-								(5) </a>
-						</h4>
-					</div>
-					<div id="collapseThree" class="panel-collapse collapse"
-						role="tabpanel" aria-labelledby="headingThree">
-						<div class="panel-body">Anim pariatur cliche reprehenderit,
-							enim eiusmod high life accusamus terry richardson ad squid. 3
-							wolf moon officia aute, non cupidatat skateboard dolor brunch.
-							Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
-							tempor, sunt aliqua put a bird on it squid single-origin coffee
-							nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
-							craft beer labore wes anderson cred nesciunt sapiente ea
-							proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-							craft beer farm-to-table, raw denim aesthetic synth nesciunt you
-							probably haven't heard of them accusamus labore sustainable VHS.
-						</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingFour">
-						<h4 class="panel-title">
-							<a class="collapsed" role="button" data-toggle="collapse"
-								data-parent="#accordion" href="#collapseFour"
-								aria-expanded="false" aria-controls="collapseFour"> help </a>
-						</h4>
-					</div>
-					<div id="collapseFour" class="panel-collapse collapse"
-						role="tabpanel" aria-labelledby="headingFour">
-						<div class="panel-body">Anim pariatur cliche reprehenderit,
-							enim eiusmod high life accusamus terry richardson ad squid. 3
-							wolf moon officia aute, non cupidatat skateboard dolor brunch.
-							Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
-							tempor, sunt aliqua put a bird on it squid single-origin coffee
-							nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
-							craft beer labore wes anderson cred nesciunt sapiente ea
-							proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-							craft beer farm-to-table, raw denim aesthetic synth nesciunt you
-							probably haven't heard of them accusamus labore sustainable VHS.
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
 	<!--//collapse -->
-	<!--related-products-->
-	<div class="related-products">
-		<div class="container">
-			<h3>Related Products</h3>
-			<div class="product-model-sec single-product-grids">
-				<div class="product-grid single-product">
-					<a href="single.html">
-						<div class="more-product">
-							<span> </span>
-						</div>
-						<div class="product-img b-link-stripe b-animate-go  thickbox">
-							<img src="images/m1.png" class="img-responsive" alt="">
-							<div class="b-wrapper">
-								<h4 class="b-animate b-from-left  b-delay03">
-									<button>View</button>
-								</h4>
-							</div>
-						</div>
-					</a>
-					<div class="product-info simpleCart_shelfItem">
-						<div class="product-info-cust prt_name">
-							<h4>Product #1</h4>
-							<span class="item_price">$2000</span>
-							<div class="ofr">
-								<p class="pric1">
-									<del>$2300</del>
-								</p>
-								<p class="disc">[15% Off]</p>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</div>
-				</div>
-				<div class="product-grid single-product">
-					<a href="single.html">
-						<div class="more-product">
-							<span> </span>
-						</div>
-						<div class="product-img b-link-stripe b-animate-go  thickbox">
-							<img src="images/m2.png" class="img-responsive" alt="">
-							<div class="b-wrapper">
-								<h4 class="b-animate b-from-left  b-delay03">
-									<button>View</button>
-								</h4>
-							</div>
-						</div>
-					</a>
-					<div class="product-info simpleCart_shelfItem">
-						<div class="product-info-cust prt_name">
-							<h4>Product #1</h4>
-							<span class="item_price">$2000</span>
-							<div class="ofr">
-								<p class="pric1">
-									<del>$2300</del>
-								</p>
-								<p class="disc">[15% Off]</p>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</div>
-				</div>
-				<div class="product-grid single-product">
-					<a href="single.html">
-						<div class="more-product">
-							<span> </span>
-						</div>
-						<div class="product-img b-link-stripe b-animate-go  thickbox">
-							<img src="images/m3.png" class="img-responsive" alt="">
-							<div class="b-wrapper">
-								<h4 class="b-animate b-from-left  b-delay03">
-									<button>View</button>
-								</h4>
-							</div>
-						</div>
-					</a>
-					<div class="product-info simpleCart_shelfItem">
-						<div class="product-info-cust prt_name">
-							<h4>Product #1</h4>
-							<span class="item_price">$2000</span>
-							<div class="ofr">
-								<p class="pric1">
-									<del>$2300</del>
-								</p>
-								<p class="disc">[15% Off]</p>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</div>
-				</div>
-				<div class="product-grid single-product">
-					<a href="single.html">
-						<div class="more-product">
-							<span> </span>
-						</div>
-						<div class="product-img b-link-stripe b-animate-go  thickbox">
-							<img src="images/m4.png" class="img-responsive" alt="">
-							<div class="b-wrapper">
-								<h4 class="b-animate b-from-left  b-delay03">
-									<button>view</button>
-								</h4>
-							</div>
-						</div>
-					</a>
-					<div class="product-info simpleCart_shelfItem">
-						<div class="product-info-cust prt_name">
-							<h4>Product #1</h4>
-							<span class="item_price">$2000</span>
-							<div class="ofr">
-								<p class="pric1">
-									<del>$2300</del>
-								</p>
-								<p class="disc">[15% Off]</p>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div>
-	<!--related-products-->
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
 			<table style="width: 100%">
-				<tr>
+					<tr>
 					<td style="width: 25%"></td>
-					<td style="width: 25%" class="faqa"><a href="support.html"
-						style="float: left;">帮助</a></td>
-					<td style="width: 25%" class="faqa"><a href="FAQ.html"
-						style="float: right;">FAQ</a></td>
+					<td style="width: 25%" class="faqa"><a href="support.html"  style="float:left;">帮助</a></td>
+					<td style="width: 25%" class="faqa"><a href="FAQ.html" style="float:right;">FAQ</a></td>
 					<td style="width: 25%"></td>
-				</tr>
-			</table>
+					</tr>
+				</table>	
 		</div>
 	</div>
 	</div>
@@ -509,6 +294,4 @@
 		</div>
 	</div>
 </body>
-<script type="text/javascript" src="js/Login.js"></script>
-<script type="text/javascript" src="js/Logout.js"></script>
 </html>
