--- a/books.html
+++ b/books.html
@@ -177,7 +177,7 @@
 					</a>				
 					<div class="product-info simpleCart_shelfItem">
 						<div class="product-info-cust prt_name">
-							<h4>Product #1</h4>								
+							<h4 id="cover1">Product #1</h4>								
 							<span class="item_price">$2000.00</span>
 							<div class="ofr">
 								<p class="pric1"><del>$2300.00</del></p>
@@ -614,4 +614,5 @@
 </body>
 <script type="text/javascript" src="js/Login.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
+<script type="text/javascript" src="js/books.js"></script>
 </html>
