--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 									<ul class="dropdown-menu multi-column columns-1">
 										<div class="row">
 											<h4 style="margin-left: 10px;">查找类别</h4>
-											<ul class="multi-column-dropdown">
+											<ul class="multi-column-dropdown" id="parent">
 												<li class="searchtype"><a class="list"
 													style="margin-left: 10px;" onclick="select(this)">作者</a></li>
 												<li class="searchtype"><a class="list"
@@ -187,7 +187,7 @@
 							<td style="width: 55%;"><input type="text" class="text"
 								id="searchinput" style="width: 100%;"></td>
 							<td style="width: 25%;"><input type="button"
-								style="width: 100%;" value="搜索" onclick="SearchBook()">
+								style="width: 100%;" value="搜索"  onclick="Search()">
 							</td>
 						</tr>
 					</table>
@@ -231,4 +231,5 @@
 <script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="js/Login.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
+<script type="text/javascript" src="js/Search.js"></script>
 </html>
