--- a/account.html
+++ b/account.html
@@ -187,7 +187,7 @@
 				<div class="register-but">
 				   <form>
 					   <input type="button" value="注册" onClick="Register()">
-					   <a id="msg"></a>
+					   <a id="msg1"></a>
 					   <div class="clearfix"> </div>
 				   </form>
 				</div>
