--- a/books.html
+++ b/books.html
@@ -333,7 +333,9 @@ function hideURLbar() {
 						</div>
 					</div>
 				</div>
+			
 			</div>
+			
 			<div class="col-md-3 rsidebar span_1_of_left">
 				<section class="sky-form">
 					<div id="type" class="product_right">
@@ -950,6 +952,25 @@ function hideURLbar() {
 				</section>
 			</div>
 		</div>
+	</div>
+	<div class="container">
+	<table style="margin-left: auto;margin-right: auto;">
+	 <tr>
+	 <td style="text-align: center;">
+	 	<div data-reactid=".0.3.1.1.0" style="margin-left: auto;margin-right: auto;margin-bottom: 20px;">
+						<div data-reactid=".0.3.1.1.0.0">
+							<span style="display: inline-block; line-height: 18px; padding: 0px 6px; border: 1px solid rgb(232, 232, 232); margin-right: 10px; color: rgb(232, 232, 232);" class="tp-common-btn    " data-page="0" data-disable="true" data-reactid=".0.3.1.1.0.0.0" onclick="Pre()">
+								<span style="display:inline-block;width:0;height:0;border-top-style:solid;border-top-color:transparent;border-top-width:4px;border-right-style:solid;border-right-color:#6C6C6C;border-right-width:4px;border-bottom-style:solid;border-bottom-color:transparent;border-bottom-width:4px;" data-reactid=".0.3.1.1.0.0.0.0">
+								</span>
+							</span>
+							<span style="display:inline-block;line-height:18px;padding:0  6px;border-width:1px;border-style:solid;border-color:#E8E8E8;:hover:[object Object];" class="tp-common-btn    " data-page="2" data-disable="false" data-reactid=".0.3.1.1.0.0.1">
+							<span data-reactid=".0.3.1.1.0.0.1.0" onclick="Next()">下一页</span>
+							<span style="display:inline-block;width:0;height:0;border-top-style:solid;border-top-color:transparent;border-top-width:4px;border-left-style:solid;border-left-color:#ff6000;border-left-width:4px;border-bottom-style:solid;border-bottom-color:transparent;border-bottom-width:4px;margin-left:8px;" data-reactid=".0.3.1.1.0.0.1.1">
+							</span></span></div></div>
+							
+	 </td>
+	 </tr>
+	</table>
 	</div>
 	<!--//products-->
 	<!--footer-->
